[Fix] Fix bad z-index for nav

--- a/statics/css/style_v2.sass
+++ b/statics/css/style_v2.sass
@@ -235,6 +235,7 @@ footer
         transition: color 0.2s
 
 .slide-nav
+    z-index: 2
     position: fixed
     left: 0
     top: 0
@@ -313,6 +314,7 @@ header
     min-width: 80px
 
 .left-nav
+    z-index: 1
     text-align: center
     position: fixed
     left: 0
